--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon-32x32.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+        <link rel="preload stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" as="style" />
+        <noscript>
+            <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+        </noscript>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Frontend Mentor | Body Mass Index Calculator</title>
     </head>
